# prism

./: .gitignore  .gitmodules  Cargo.toml  FEATURES.md  README.md  TASKS.md  VALIDATION.md  cpu_contender.py  cpu_contender_script.sh  shell.nix
docs/: commands.md  demo.cast
example-application/: Cargo.toml
example-application/src/: direct-read.c  main.rs
fs-sync/: .gitignore  Cargo.toml
metric-collector/: Cargo.toml  build.rs
metric-collector/src/: cmdline.rs  configure.rs  extract.rs  lib.rs  main.rs  target.rs
metric-collector/src/bpf/: clone.bt  futex_wait.bt  futex_wait_event.bt  io_wait.bt  ipc.bt  ipc_trace_events.bt  poc_poll_select.bt  vfs.bt
metric-collector/src/execute/: mod.rs
metric-collector/src/execute/programs/: clone.rs  futex.rs  iowait.rs  ipc.rs  mod.rs
metric-collector/src/metrics/: futex.rs  iowait.rs  ipc.rs  mod.rs  scheduler.rs
metric-collector/src/sub/: mod.rs
metric-collector/src/sub/futex/: mod.rs
metric-collector/src/sub/futex/bpf/: futex.bpf.c  futex.h
metric-collector/src/sub/include/: common.h  consts.bindings.rs  consts.h  vfs.h
metric-collector/src/sub/include/linux/: bindings.rs  inet.h  socket.h
metric-collector/src/sub/iowait/: mod.rs
metric-collector/src/sub/iowait/bpf/: iowait.bpf.c  iowait.h
metric-collector/src/sub/muxio/: mod.rs  muxio.bindings.rs
metric-collector/src/sub/muxio/bpf/: muxio.bpf.c  muxio.h
metric-collector/src/sub/net/: mod.rs
metric-collector/src/sub/net/bpf/: net.bpf.c  net.h
metric-collector/src/sub/taskstats/: mod.rs  taskstats.bindings.rs
metric-collector/src/sub/taskstats/bpf/: taskstats.bpf.c  taskstats.h
metric-collector/src/sub/vfs/: mod.rs
metric-collector/src/sub/vfs/bpf/: vfs.bpf.c  vfs.h
notebooks/: fs.ipynb  mysql.ipynb  poc.ipynb  redis.ipynb  transform.py
percentile-ps/: Cargo.toml
poc/: Cargo.toml
poc/src/pipe/: main.rs
workload-generator/: Cargo.toml
workload-generator/src/: main.rs
(+45 files in other folders)
