[package]
name = "example-application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "cargo"]}
core_affinity = "0.8.1"
http = "1.0.0"
httparse = "1.8.0"
libc = "0.2.153"

[build-dependencies]
cc = "1.0"
