[package]
name = "metric-collector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "metric-collector"
path = "src/main.rs"

[lib]
name = "collector"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
libbpf-cargo = { version = "0.24.8" }
vmlinux = { version = "0.0", git = "https://github.com/libbpf/vmlinux.h.git", rev = "172793d6a409d98d1cfb843c80df73733e9f832f" }

[dependencies]
chrono = "0.4.33"
ctrlc = "3.4.2"
eyre = "0.6.12"
regex = "1.10.3"
indoc = "2.0.4"
libc = "0.2.153"
nix = { version = "0.28.0", features = ["time"] }
lru = "0.12.3"
tempdir = "0.3.7"
lru_time_cache = "0.11.11"
lazy_static = "1.5.0"

anyhow = "1.0"
libbpf-rs = { version = "0.24.8" }
plain = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"]}
clap = { version = "4.0.32", default-features = false, features = ["std", "derive", "help", "usage", "cargo"] }

duckdb = { version = "0.9.2" }
log = "0.4.26"
env_logger = "0.11.6"

dashmap = "6.1.0"
