[package]
name = "workload-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
csv = "1.3.0"
eyre = "0.6.12"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"]}
